--- a/tms/src/main/resources/application.properties
+++ b/tms/src/main/resources/application.properties
@@ -3,3 +3,11 @@ server.port=8090
 spring.datasource.url= jdbc:postgresql://localhost:5432/tms 
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+
+# show all queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
